apps/media/prowlarr/networkpolicies/nginx-egress-prowlarr.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nginx-egress-prowlarr
  namespace: ingress-nginx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/name: ingress-nginx
  egress:
    - toServices:
        - k8sService:
            serviceName: prowlarr
            namespace: media
      toPorts:
        - ports:
            - port: "9696"
              protocol: TCP
