apps/media/prowlarr/networkpolicies/prowlarr.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prowlarr
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app: prowlarr
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: traefik-traefik
            app.kubernetes.io/name: traefik
            io.kubernetes.pod.namespace: traefik
        - matchLabels:
            app: sonarr
            io.kubernetes.pod.namespace: media
        - matchLabels:
            app: radarr
            io.kubernetes.pod.namespace: media
      toPorts:
        - ports:
            - port: "9696"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: ${USENET_INDEXER_DOMAIN}
        - matchName: ghcr.io # catppuccin theme
        - matchName: hooks.slack.com
        - matchName: indexers.prowlarr.com
        - matchName: pkg-containers.githubusercontent.com # catppucin theme
        - matchName: prowlarr.servarr.com
        - matchName: raw.githubusercontent.com # catppuccin theme
        - matchName: releases.servarr.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: radarr
            io.kubernetes.pod.namespace: media
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: sonarr
            io.kubernetes.pod.namespace: media
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: sabnzbd
            io.kubernetes.pod.namespace: media
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
