apps/media/prowlarr/networkpolicies/traefik-egress-prowlarr.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traefik-egress-prowlarr
  namespace: traefik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: traefik-traefik
      app.kubernetes.io/name: traefik
  egress:
    - toEndpoints:
        - matchLabels:
            app: prowlarr
            io.kubernetes.pod.namespace: media
      toPorts:
        - ports:
            - port: "9696"
              protocol: TCP
